fix overflowing to bottom

--- a/src/app/modules/main/home/home.component.css
+++ b/src/app/modules/main/home/home.component.css
@@ -201,6 +201,7 @@
     }
     .btn-icon-cont{
         margin-top: 35px;
+        padding-bottom: 8vh;
     }
     #about{
         padding: 0 0 23vh;
